# cgam

./: .clang-format  .dir-locals.el  .gitignore  Cargo.toml  build.rs  readme.org
common/: Cargo.toml
common/src/: lib.rs  resources.rs  state.rs
cpp/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  rtweekend.h  sphere.h  vec3.h
phong/: Cargo.toml
phong/common/: Cargo.toml
phong/common/src/: camera.rs  model.rs  pipeline.rs  resources.rs  texture.rs
phong/src/: main.rs
physics/: 01-cannonball2d.html  02.cannonball3d.html  03-billiard.html  04-pinball.html  04-pinball.js  05-bead.html  05-bead.js  05-many_beads.html  05-many_beads.js  06-pendulum.html  06-pendulum.js  06-short_pendulum.html  06-short_pendulum.js  08-interaction.html  08-interaction.js  10-soft_bodies.html  10-soft_bodies.js  11-hashing.html  11-hashing.js  12-soft_body_skinning.html  12-soft_body_skinning.js  datas.js  utils.js
ray_tracing_gems/: book.org
rtnw_cc/: CMakeLists.txt  aabb.h  bvh.h  camera.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h
rtow/cpp/: camera.h  color.h  hittable.h  interval.h  main.cc  material.h  rtweekend.h  vec3.h
rtow_cc/: camera.h  hittable.h  main.cc  material.h  sphere.h  vec3.h
rtow_rs/: Cargo.toml
rtow_rs/src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  ray.rs  rtweekend.rs  sphere.rs  vec3.rs
rtow_wgpu/: Cargo.toml
rtow_wgpu/src/: algebra.rs  camera.rs  main.rs  render.rs  shaders.wgsl
rtrl_cc/: CMakeLists.txt  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  onb.h  pdf.h  perlin.h  quad.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
src/: lib.rs  main.rs  view.wgsl
wgpu_tutorial/: Cargo.toml  readme.org
(+16 files in other folders)
