[package]
name = "rtr_tutorial"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common"]

[dependencies]
anyhow = "1.0"
pollster = "0.3.0"
common = {path = "./common/"}
winit = { version = "0.29", features = ["rwh_05"] }
cfg-if= "1"
tobj = { version = "3.2.0", features = ["async"] }
instant = "0.1.13"
wgpu = "22.1.0"
cgmath = "0.18.0"
bytemuck = { version = "1.16.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
