[package]
name = "phong"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.1.0"
pollster = "0.3"
cfg-if= "1"
bytemuck = { version = "1.16.3", features = ["derive"] }
anyhow = "1.0.86"
cgmath = "0.18.0"
tobj = { version = "3.2.0", features = ["async"] }
instant = "0.1.13"
rtr_tutorial = {path = "../"}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]