[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytemuck = "1.18.0"
cgmath = "0.18.0"
env_logger = "0.11.5"
image = "0.25.2"
instant = "0.1.13"
log = "0.4.22"
tobj = { version = "4.0.2", features = ["async"] }
wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
